welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: not found: value int
  int a = Math.abs(a - 10);
  ^close10:3: error: not found: value int
  int b = Math.abs(b - 10);
  ^close10:4: error: not found: value aDiff
   (aDiff < bDiff) {
    ^close10:4: error: not found: value bDiff
   (aDiff < bDiff) {
            ^close10:7: error: not found: value bDiff
  if (bDiff < aDiff) {
      ^close10:7: error: not found: value aDiff
  if (bDiff < aDiff) {
              ^close10:7: error: type mismatch;
 found   : Unit
 required: Int
  if (bDiff < aDiff) {
  ^