welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
  int a = Math.abs(a - 10);
  int b = Math.abs(b - 10);
   (aDiff < bDiff) {
    return a;
  }
  if (bDiff < aDiff) {
    return b;
  }
}